--- a/css/cover.css
+++ b/css/cover.css
@@ -22,7 +22,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  font-family: monospace;
+  /* font-family: monospace; */
 }
 
 .cover-container {
