--- a/css/cover.css
+++ b/css/cover.css
@@ -22,11 +22,10 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  /* font-family: monospace; */
 }
 
 .cover-container {
-  max-width: 42rem;
+  max-width: 40rem;
 }
 
 .masthead {
@@ -77,3 +76,24 @@ body {
   box-shadow: 0px 0px 15px 15px rgba(0, 0, 0, 0.1); 
 }
 
+.modal-content {
+  background-color: transparent !important;
+  border: none;
+}
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.60);
+}
+
+.modal-header {
+  border: none;
+}
+
+.hoverdarken, .nav-link {
+  cursor: pointer;
+}
+
+.hoverdarken:hover {
+  color: rgb(200, 200, 200);
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+}
